--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
           cp target/${{ matrix.target }}/release/${{ matrix.compiled_name }} target/${{ matrix.target }}/release/${{ matrix.executable }}
           ls -l target/${{ matrix.target }}/release/${{ matrix.executable }}
       - name: Upload artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload четырех@v4
         with:
           name: ${{ matrix.artifact_name }}
           path: target/${{ matrix.target }}/release/${{ matrix.executable }}
@@ -61,6 +61,8 @@ jobs:
     permissions:
       contents: write
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
