--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
           cp target/${{ matrix.target }}/release/${{ matrix.compiled_name }} target/${{ matrix.target }}/release/${{ matrix.executable }}
           ls -l target/${{ matrix.target }}/release/${{ matrix.executable }}
       - name: Upload artifact
-        uses: actions/upload четырех@v4
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.artifact_name }}
           path: target/${{ matrix.target }}/release/${{ matrix.executable }}
