--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,87 +16,100 @@ jobs:
         include:
           - os: windows-latest
             target: x86_64-pc-windows-msvc
-            artifact_name: tgame-windows-x86_64.exe
+            artifact_name: tgame-windows-x86_64
+            compiled_name: terminal-games.exe
             executable: tgame.exe
           - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
             artifact_name: tgame-linux-x86_64
+            compiled_name: terminal-games
             executable: tgame
           - os: macos-latest
             target: x86_64-apple-darwin
             artifact_name: tgame-macos-x86_64
+            compiled_name: terminal-games
             executable: tgame
           - os: macos-latest
             target: aarch64-apple-darwin
             artifact_name: tgame-macos-arm64
+            compiled_name: terminal-games
             executable: tgame
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
       - name: Install Rust
-        uses: actions-rs/toolchain@v1
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: stable
           override: true
           target: ${{ matrix.target }}
       - name: Build
         run: cargo build --release --target ${{ matrix.target }}
+      - name: Verify build output
+        run: |
+          cp target/${{ matrix.target }}/release/${{ matrix.compiled_name }} target/${{ matrix.target }}/release/${{ matrix.executable }}
+          ls -l target/${{ matrix.target }}/release/${{ matrix.executable }}
       - name: Upload artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.artifact_name }}
           path: target/${{ matrix.target }}/release/${{ matrix.executable }}
+          if-no-files-found: error
 
   release:
     needs: build
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
       - name: Download artifacts
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v4
         with:
           path: artifacts
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: List downloaded artifacts
+        run: |
+          ls -R artifacts || echo "No artifacts found"
+      - name: Prepare and package artifacts
+        run: |
+          # Create a directory for packaged assets
+          mkdir -p packaged-assets
+
+          # Windows: Create .zip with renamed executable
+          mkdir -p tmp-windows
+          cp artifacts/tgame-windows-x86_64/tgame.exe tmp-windows/tgame
+          cd tmp-windows
+          zip -r ../packaged-assets/tgame-windows-x86_64.zip .
+          cd ..
+
+          # Linux: Create .tar.gz with renamed executable
+          mkdir -p tmp-linux
+          cp artifacts/tgame-linux-x86_64/tgame tmp-linux/tgame
+          tar -C tmp-linux -czf packaged-assets/tgame-linux-x86_64.tar.gz tgame
+
+          # MacOS x86_64: Create .tar.gz with renamed executable
+          mkdir -p tmp-macos-x86_64
+          cp artifacts/tgame-macos-x86_64/tgame tmp-macos-x86_64/tgame
+          tar -C tmp-macos-x86_64 -czf packaged-assets/tgame-macos-x86_64.tar.gz tgame
+
+          # MacOS arm64: Create .tar.gz with renamed executable
+          mkdir -p tmp-macos-arm64
+          cp artifacts/tgame-macos-arm64/tgame tmp-macos-arm64/tgame
+          tar -C tmp-macos-arm64 -czf packaged-assets/tgame-macos-arm64.tar.gz tgame
+
+          # List packaged assets
+          ls -l packaged-assets
+      - name: Create draft release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.event.inputs.tag }}
-          release_name: Release ${{ github.event.inputs.tag }}
-          draft: false
-          prerelease: false
-      - name: Upload Windows Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/tgame-windows-x86_64.exe/tgame.exe
-          asset_name: tgame-windows-x86_64.exe
-          asset_content_type: application/octet-stream
-      - name: Upload Linux Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/tgame-linux-x86_64/tgame
-          asset_name: tgame-linux-x86_64
-          asset_content_type: application/octet-stream
-      - name: Upload MacOS x86_64 Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/tgame-macos-x86_64/tgame
-          asset_name: tgame-macos-x86_64
-          asset_content_type: application/octet-stream
-      - name: Upload MacOS arm64 Asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts/tgame-macos-arm64/tgame
-          asset_name: tgame-macos-arm64
-          asset_content_type: application/octet-stream
+        run: |
+          echo "Creating draft release for ${{ github.event.inputs.version }}"
+          gh release create "${{ github.event.inputs.version }}" \
+            packaged-assets/tgame-windows-x86_64.zip \
+            packaged-assets/tgame-linux-x86_64.tar.gz \
+            packaged-assets/tgame-macos-x86_64.tar.gz \
+            packaged-assets/tgame-macos-arm64.tar.gz \
+            --title "Release ${{ github.event.inputs.version }}" \
+            --notes "Release ${{ github.event.inputs.version }} for tgame" \
+            --draft=true
+          echo "Draft release created. Please visit https://github.com/${{ github.repository }}/releases to edit the release notes and publish."
