--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -122,3 +122,4 @@ jobs:
           user_email: kongtaoxing@gmail.com
           tap: kongtaoxing/homebrew-tap
           formula: tgame
+          tag: ${{ github.event.inputs.version }}
